# stdix

./: CMakeLists.txt  README.md
src/: stdix.c  stdix.h  stdix_arraylist.c  stdix_arraylist.h  stdix_dynamicarray.c  stdix_dynamicarray.h  stdix_linkedtree.c  stdix_linkedtree.h  stdix_linkedtreeset.c  stdix_linkedtreeset.h  stdix_sorting.c  stdix_sorting.h  stdix_string.c  stdix_string.h
test/: stdix_test.c  stdix_test.h
